--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "project3",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
-  }
+    "express": "^4.19.2"
+  },
+  "description": ""
 }
