--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "Steven Riegerix",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "winston": "^3.9.0"
   },
   "description": ""
 }
